--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,6 @@
 }
 body {
     font-family: var(--main-font);
-    background-color: var(--bg-color-light);
-    width: 1600px;
 }
 /* Загальні стилі */
 .link {
@@ -55,6 +53,8 @@ img {
 .header {
     background-color: var(--basic-white);
     border-bottom: 1px solid #ECECEC;  
+    padding-top: 24px;
+    padding-bottom: 24px;
 }   
  
 .container {
@@ -85,15 +85,14 @@ img {
 
 .main-nav-list {
     display: flex;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    
 }
 .main-nav-list .item:not(:last-child) {
     margin-right: 50px;
 }
 .main-nav-link {
     display: inline-block;
-    padding: 20px;
+   
 
     font-weight: 500;
         font-size: 14px;
@@ -128,11 +127,14 @@ color: var(--accent-color);
 .hero {
     background-color: var(--bg-color-dark);
     text-align: center;
-    padding: 200px 452px;
+    padding-top: 200px;
+    padding-bottom: 200px;
     
 }
 .hero-title {
-    display: inline-block;
+    display: block;
+    margin-left: 452px;
+    margin-right: 452px;
     margin-bottom: 30px;
 
     font-weight: 900;
@@ -188,6 +190,8 @@ color: var(--accent-color);
         
 }
 .benefits-list-item {
+    width: 270px;
+
         font-size: 14px;
         line-height: 1.71;
         letter-spacing: 0.03em;
@@ -245,7 +249,7 @@ padding-bottom: 30px;
 
 font-weight: 500;
     font-size: 16px;
-    line-height: 1.9;
+    line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--secondary-color-txt);
@@ -253,7 +257,7 @@ font-weight: 500;
 }
 .team-list-item-txt {
     font-size: 16px;
-        line-height: 1.9;
+        line-height: 1.19;
         text-align: center;
         letter-spacing: 0.03em;
         color: var(--main-color-txt);
@@ -316,7 +320,7 @@ font-weight: 500;
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    margin-bottom: 34px;
+    margin-bottom: 50px;
 }
 .filter-list-item {
     display: inline-block;
@@ -344,7 +348,10 @@ font-weight: 500;
     flex-wrap: wrap;
 }
 .portfolio-list-item {
+    flex-basis: 368px;
     background: var(--basic-white);
+    border-left: 1px solid #EEEEEE;
+    border-right: 1px solid #EEEEEE;
     border-bottom: 1px solid #EEEEEE;
     margin-right: 30px;
     margin-bottom: 30px;
