--- a/css/styles.css
+++ b/css/styles.css
@@ -128,19 +128,19 @@ color: var(--accent-color);
     background-color: var(--bg-color-dark);
     text-align: center;
     padding-top: 200px;
-    padding-bottom: 200px;
-    
+    padding-bottom: 200px;   
 }
+
 .hero-title {
     display: block;
-    margin-left: 452px;
-    margin-right: 452px;
+    width: 696px;
     margin-bottom: 30px;
+    margin-right: auto;
+    margin-left: auto;
 
     font-weight: 900;
         font-size: 44px;
         line-height: 1.36;
-        text-align: center;
         letter-spacing: 0.06em;
         text-transform: uppercase;
         color: var(--basic-white);
@@ -150,14 +150,12 @@ color: var(--accent-color);
     display: inline-block;
     padding: 10px 32px;
     background-color: var(--accent-color);
-
     font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.06em;
     color: var(--basic-white);
-    text-align: center;
 
     cursor: pointer;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
